fix spacing for questions/responses

--- a/frontend/src/components/Candidate-Decider/ResponsesPanel.module.css
+++ b/frontend/src/components/Candidate-Decider/ResponsesPanel.module.css
@@ -1,3 +1,7 @@
 .questionHeader {
-  margin: 12px 0;
+  margin: 0.1em 0;
+}
+
+.questionResponseContainer {
+  margin-bottom: 1em;
 }
